# Stuff

./: README.md
AiSD/: z1.1-kod.c
Ewolulo/ES/: es.py  z1b.py  z1b_1.txt
Ewolulo/SGA/: sga.py  tspparser.py  z1.py  z2a.py  z2b.py  z2b_try_X.txt
Ewolulo/SGA/SGA/: z1.py
Experiments/: diamondsquare  diamondsquare.hi  diamondsquare.hs  sq.txt
MaterialShowcase/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  MaterialShowcase.CSharp.Editor.csproj  MaterialShowcase.CSharp.Plugins.csproj  MaterialShowcase.CSharp.csproj  MaterialShowcase.sln
MaterialShowcase/Assets/: Directioneer.cs  LampRotator.cs  PipeBehaviour.cs  controls.cs  sc.unity
MaterialShowcase/Assets/Blend/: Arrow.blend  Arrow.blend1  ArrowWithBalls.blend  ArrowWithBalls.blend1  SomeCube.blend  lamp.blend  lamp.blend1  mainHall.blend1  part_hull_cube.blend1  pipe.blend  pipe.blend1  uwr.blend  uwr.blend1
MaterialShowcase/Assets/Hands/: HandBehaviour.cs
MaterialShowcase/Assets/Machine/: IngredientBehaviour.cs  LampBehaviour.cs  MachineBehaviour.cs  README.txt
MaterialShowcase/Assets/Mats/: New Material.mat  glass.mat  marble.mat  metal.mat  simpleEmissive.mat  uwr 1.mat  uwr.mat  woodandrope.mat  woodandropeNOBUMP.mat
MaterialShowcase/Assets/sc/: LightingData.asset
SGA/: tspparser.py  z2a.py
SGA/Ewolulo/EwoluloLista1/: main.py
SGA/Ewolulo/SGA/: z2b.py
Somefun/: Untitled.ipynb
Somefun/examples/: matplotlib_util_demo.ipynb  newtons_cradle.ipynb
Somefun/examples/.ipynb_checkpoints/: matplotlib_util_demo-checkpoint.ipynb  newtons_cradle-checkpoint.ipynb
Utils/FileMelder/: FileMelder.sln
Utils/FileMelder/FileMelder/: FileMelder.csproj  Program.cs
ai4g/: z1lab.cs
ai4g/Bombz/: Bombz.sln
ai4g/Bombz/Bombz/: Bombz.csproj  a.txt  board.cs  main.cs  mcts.cs  res.txt  utilities.cs
ai4g/Bustin/: Bustin.sln
ai4g/Bustin/Bustin/: Bustin.csproj  Program.cs
ai4g/kwidicz/: kwidicz.sln
ai4g/kwidicz/kwidicz/: BTree.cs  DecisionMaking.cs  Main.cs  Math.cs  kwidicz.csproj  res.txt
ai4g/z4_1/: z4_1.sln
ai4g/z4_1/z4_1/: def.aspx.designer.cs  z4_1.csproj
aspnet/z1_1/: z1_1.sln
aspnet/z1_1/z1_1/: WebForm1.aspx  WebForm1.aspx.cs  WebForm1.aspx.designer.cs  asdf.txt  z1_1.csproj
aspnet/z1_6/: z1_6.sln
aspnet/z1_6/z1_6/: index.aspx  index.aspx.cs  index.aspx.designer.cs  z1_6.csproj
aspnet/z1_7/: z1_7.sln
aspnet/z1_7/z1_7/: dekl.aspx  dekl.aspx.cs  dekl.aspx.designer.cs  new 5.txt  new 8.txt  print.aspx  print.aspx.cs  print.aspx.designer.cs  table.css  z1_7.csproj
aspnet/z2_2/: z2_2.sln
aspnet/z2_2/z2_2/: WebForm1.aspx  WebForm1.aspx.cs  WebForm1.aspx.designer.cs  z2_2.csproj
aspnet/z3_1/: z3_1.sln
aspnet/z3_1/z3_1/: bind1.aspx  bind1.aspx.cs  bind1.aspx.designer.cs  z3_1.csproj
aspnet/z3_3/: z3_3.sln
aspnet/z3_3/z3_3/: Business.cs  ShopMain.aspx  z3_3.csproj  (+2 more)
aspnet/z4_2/: z4_2.sln
aspnet/z5_1/: z5_1.sln
aspnet/z6_1_client/: z6_1_client.sln
aspnet/z7_4/: z7_4.sln
aspnet/z7_6/: z7_6.sln
nvm/trash/: 2_1_5.shfbproj
pgk/: CMakeLists.txt  EarthStuff  anglerfish.blend  anglerfish.blend1  anglerfish.xcf  aquarium.blend  aquarium.blend1  bubble - Copy.blend  bubble - Copy.blend1  bubble.blend  bubble.blend1  fish.blend  fish.blend1
pgk/zad2/: FragmentShader.fragmentshader  VertexShader.vertexshader  model.cpp  model.hpp  zad2.cpp
pgk/zad3/: VertexShader.vertexshader  model.cpp  model.hpp  utilities.cpp  utilities.hpp  zad3.cpp
pgk/zad4/: BubbleFragmentShader.frag  CMakeLists.txt  DefaultFragmentShader.frag  ReadMe.txt  VertexShader.vert  aaaCMakeLists.txt  anglerfish_body.mtl  default.DDS  fish.mtl  graphics.cpp  graphics.hpp  model.cpp  model.hpp  new 11.txt  zad4.cpp
pgk/zad4/Assets/: BestFragmentShaderEver.frag  BestVertexShaderEver.vert  bubble.DDS  default.DDS
pgk/zad5/: CMakeLists.txt  grid.cpp  grid.hpp  terrain.cpp  terrain.hpp  zad5.cpp
pgk/zad5/Assets/: BallVertexShader.vert  FlatVertexShader.vert  FragmentShader.frag
pgk/zad6/: graphics.cpp  graphics.hpp  model.cpp  model.hpp  zad6.cpp
pgk/zad6/Assets/: BestFragmentShaderEver.frag  BestFragmentShaderEverNoise.frag  BestVertexShaderEver.vert  anglerfish.DDS  normal.DDS
poo/Lista3/: Lista3.sln
poo/poo5/: poo5.sln
poo/poo_4/: poo_4.sln
poo/poo_6/: poo_6.sln
sk/udpclient/: filtr  filtr.c  lel  lel.c  log  out  outF  output  ser  ser.c  tekst.txt  tymoteusz_kaczorowski.tar.bz2
sk/wwwServer/: tymoteusz_kaczorowski.tar.bz2  wwwserver
(+386 files in other folders)
